@@ -1,3 +1,8 @@
+2002-02-09  Richard Henderson  <rth@redhat.com>
+
+	* lib/target.exp (prune_warnings): Strip "In function" etc early.
+	Adjust "dangerous" regexp for glibc's tmpnam warning.
+
 2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
 
 	* lib/libgloss.exp [get_multilibs]: Compute multitop earlier, and
